Fixed issue where fade ins were causing a horizontal scroll bar to appear and formatted social links on about page to appear more readable on mobile formats.

--- a/css/about.css
+++ b/css/about.css
@@ -490,6 +490,8 @@ footer .footer-content .gets-border {
 @media (max-width: 650px) {
   .main-content-container .directory-boxes .directory-content .socials {
     width: 100%;
+    flex-direction: column;
+    height: 15rem;
   }
 }
 .main-content-container .directory-boxes .directory-content .socials a {
